--- a/src/main/resources/assets/thaumia/lang/en_us.json
+++ b/src/main/resources/assets/thaumia/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.thaumia.raw_auracite": "Raw Auracite",
   "item.thaumia.auracite": "Auracite",
 
+  "block.thaumia.auracite_core": "Auracite Core",
+
   "itemGroup.thaumia.auracite": "Thaumia"
 
 
